05-players/player10/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-player01
  labels:
     app: players
     site: campus
