05-players/player10/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-player10
  namespace: ns-player10
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:  
  rules:
    - host: player10.randco.eu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-player10
              port:
                number: 80
